metadata/force-app/main/default/objects/Limit_Usage__c/Limit_Usage__c.object-meta.xml
<CustomObject>
    <label>Limit Usage</label>
    <nameField>
        <displayFormat>LIMUSG-{0000000}</displayFormat>
        <label>Limate Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Limits Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>