metadata/force-app/main/default/objects/Limit_Usage__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Limits Usage</relationshipLabel>
    <relationshipName>Limits_Usage</relationshipName>
    <type>Lookup</type>
</CustomField>