metadata/force-app/main/default/objects/Limit_Usage__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Limit</label>
    <referenceTo>Limit__c</referenceTo>
    <relationshipLabel>Limits Usage</relationshipLabel>
    <relationshipName>Limits_Usage</relationshipName>
    <type>Lookup</type>
</CustomField>