metadata/force-app/main/default/objects/Limit_Usage__c/fields/Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Sync_Date__c</fullName>
    <label>Sync Date</label>
    <type>Date</type>
</CustomField>