metadata/force-app/main/default/objects/Limit_Usage__c/fields/Usage_Value__c.field-meta.xml
<CustomField>
    <fullName>Usage_Value__c</fullName>
    <label>Usage Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>